# mcp-debugger

./: AGENTS.md  CLAUDE.md  LICENSE  MANIFEST.in  README.md  package.json  pyproject.toml
.github/workflows/: tests.yml
examples/: buggy_discount.py  test_buggy_discount.py
src/codex_debugger/: agent_guidance.py  cli.py  dap.py  mcp_server.py  session.py
src/mcp_debugger/: __init__.py  agent_guidance.py  cli.py  mcp_server.py  session.py
src/vibe_debug/: __init__.py  agent_guidance.py  cli.py  mcp_server.py  node_session.py  session.py
tests/: test_cli.py  test_dap.py  test_mcp_server.py
tools/: runtime_proof.py
