[project]
name = "codex-debugger"
version = "0.1.0"
description = "An MCP debugger server that lets coding agents inspect live Python runtime state."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["mcp", "debugger", "debugpy", "dap", "coding-agent", "codex", "claude-code"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Software Development :: Debuggers",
]
dependencies = [
  "debugpy>=1.8.0",
]

[project.scripts]
codex-debugger = "codex_debugger.cli:main"
codex-debugger-mcp = "codex_debugger.mcp_server:main"

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
